crates/reddb-server/tests/snapshots/migration_parser_snapshots__create_migration_only_keyword.snap
---
source: crates/reddb-server/tests/migration_parser_snapshots.rs
expression: "fmt_parse_error(\"CREATE\")"
---
input: "CREATE"
kind:  Syntax
error: Parse error at 1:1: Unexpected token: EOF (expected: TABLE, INDEX, UNIQUE, TIMESERIES, QUEUE, TREE, HLL, SKETCH, FILTER, SCHEMA, SEQUENCE, MIGRATION)
