crates/reddb-server/tests/snapshots/migration_parser_snapshots__create_migration_reserved_word_as_name.snap
---
source: crates/reddb-server/tests/migration_parser_snapshots.rs
expression: "fmt_parse_error(\"CREATE MIGRATION SELECT AS CREATE TABLE t (id INTEGER)\")"
---
input: "CREATE MIGRATION SELECT AS CREATE TABLE t (id INTEGER)"
kind:  Syntax
error: Parse error at 1:18: Unexpected token: SELECT (expected: identifier)
