crates/reddb-server/tests/snapshots/migration_parser_snapshots__explain_migration_eof.snap
---
source: crates/reddb-server/tests/migration_parser_snapshots.rs
expression: "fmt_parse_error(\"EXPLAIN MIGRATION\")"
---
input: "EXPLAIN MIGRATION"
kind:  Syntax
error: Parse error at 1:18: Unexpected token: EOF (expected: identifier)
