crates/reddb-server/tests/snapshots/migration_parser_snapshots__migration_dos_identifier_too_long.snap
---
source: crates/reddb-server/tests/migration_parser_snapshots.rs
expression: formatted
---
kind:  IdentifierTooLong { limit_name: "max_identifier_chars", value: 8 }
error: Parse error at 1:8: identifier exceeds maximum length (max_identifier_chars = 8)
