crates/reddb-server/tests/snapshots/migration_parser_snapshots__migration_dos_input_too_large.snap
---
source: crates/reddb-server/tests/migration_parser_snapshots.rs
expression: formatted
---
kind:  InputTooLarge { limit_name: "max_input_bytes", value: 16 }
error: Parse error at 1:1: input exceeds maximum size (max_input_bytes = 16 bytes)
