crates/reddb-server/tests/snapshots/migration_parser_snapshots__rollback_migration_missing_name_eof.snap
---
source: crates/reddb-server/tests/migration_parser_snapshots.rs
expression: "fmt_parse_error(\"ROLLBACK MIGRATION \")"
---
input: "ROLLBACK MIGRATION "
kind:  Syntax
error: Parse error at 1:20: Unexpected token: EOF (expected: identifier)
